# OpenGL-Win32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: Scene.glb
assets/shader/: fragment_color.glsl  fragment_sea.glsl  fragment_shader.glsl  vertex_shader.glsl
engine/: CMakeLists.txt
engine/include/event/: Event.hpp
engine/include/log/: log-utils.h
engine/include/model/: Object.h
engine/include/model/component/: RigidBody.h  Transform.h
engine/include/util/: gl-utils.h
engine/src/core/: GameEgine.cpp  Raycast.cpp
engine/src/model/: Object.cpp
engine/src/model/component/: Material.cpp  RigidBody.cpp  Shader.cpp  Transform.cpp
engine/src/utils/: asset_loader.cpp  gl-utils.cpp
game/: CMakeLists.txt  application.cpp
src/: Application.cpp  Application.h  GameEgine.cpp  GameEgine.h  Shader.cpp  main.cpp
src/engine/: GameEgine.cpp  GameEgine.h  Raycast.cpp
src/event/: EventListener.h  EventManager.cpp  EventManager.h  EventManagerIMPL.cpp  EventManagerIMPL.h  EventSystem.h
src/model/: Object.cpp  Object.h  Raycast.cpp  Raycast.h  RigidBody.cpp
src/model/component/: Material.cpp  Material.h  Shader.cpp  Transform.cpp
src/render/: Material.cpp  Material.h  Shader.cpp  Shader.h
src/utils/: asset_loader.cpp  asset_loader.h  assets.h  gl-utils.cpp  gl-utils.h  log-utils.h
